[MAC] First commit

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,14 @@ set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
 set-option -g status-attr default
 
+
 # set window split
-bind-key v split-window -h
-bind-key b split-window
+#bind-key v split-window -h "#{pane_current_path}"
+#bind-key b split-window "#{pane_current_path}"
+
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 # default window title colors
 set-window-option -g window-status-fg colour244 #base0
@@ -82,13 +87,16 @@ bind-key C command-prompt -p "Name of new window: " "new-window -n '%%'"
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # auto window rename
-set-window-option -g automatic-rename
+set-window-option -g automatic-rename off
+setw -g automatic-rename off
+set-option -g allow-rename off
 
 # color
 set -g default-terminal "screen-256color"
+setw -g xterm-keys on
 
 # status bar
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
 # https://github.com/edkolev/dots/blob/master/tmux.conf
 # Updates for tmux 1.9's current pane splitting paths.
@@ -142,3 +150,5 @@ set-window-option -g clock-mode-colour green #green
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+
